GNOME Bugzilla – Bug 680282
Displays "me" owner for files instead of my username
Last modified: 2014-01-19 22:29:56 UTC
What happens ============ Nautilus is displaying 'me' as owner of my files, when 'me' is not the owner of my files. What should happen ================== I expect Nautilus to display the the owner of a file or folder in the 'Owner' column (and other places like the 'Preferences > Permissions' tab). Version info ============ Nautilus 3.5.4 ('3.5.4-0ubuntu1') on the development version of Ubuntu 12.10.
(In reply to comment #0) > Nautilus is displaying 'me' as owner of my files, when 'me' is not the owner of > my files. This is a little paradoxical; "me" means yourself, and I think it's actually a better wording than spelling the username. Google Docs does the same FWIW. What's the confusion about this wording?
> "me" means yourself That's my problem with this approach. I don't expect to see what the value in the owner field means, I expect to see its 'real' value. If your username is 'cosimo' and you don't know that a file with the owner 'cosimo' belongs to you, then I don't think the file browser is at fault. > What's the confusion My point is, that I think it's wrong to change (displayed) file information just to make the obvious more clear. However, there are some points that could very well confuse users: * The owner gets renamed, the group doesn't. * If the user tries to use 'me' in a chown command, it won't work. * If there actually IS a user named 'me': - if you don't show the group column, his files will only differ by the small lock emblem on the files, - depending on the 'me' user's permissions, he could change the group to my username and the file wouldn't stick out at all.
indeed "me" means nothing on a system with several users. Really need the old nautilus setting: "real username" , "root", "..."
I think using "you" instead of "me" should be seriously considered. In user documentation, we use "you" and "your" a lot, and I think that using the same personal form would make more sense. See library.gnome.org/users/gnome-help/stable/shell-introduction.html as an example. If this is changed, then "My Account" found in the User Accounts panel in System Settings would need to be changed also.
This is working as intended. I don't think using 'you' would change much. Google docs uses 'me' and I think it works.
I think there is a valid concern raised on Comment #2: "If there actually IS a user named 'me'". Should this concern be a filled as a separate bug? A way to solve this ambiguity is using "Me" instead, because usernames can't have capital letters, if I am not mistaken. The capital "M" would also help in visually differentiating it from other usernames in general.
Ok that sounds like a very reasonable suggestion.
Created attachment 221167 [details] [review] Use Me instead of me to differentiate from any usernames Since "me" could be a local username and usernames will probably not be capitalized.
Review of attachment 221167 [details] [review]: Sure, looks fine.
Attachment 221167 [details] pushed as b37b607 - Use Me instead of me to differentiate from any usernames
*** Bug 722569 has been marked as a duplicate of this bug. ***
*attempting to re-open* What happens ============ Nautilus is displaying 'Me' as owner of my files, when 'Me' is not the owner of my files. What should happen ================== I expect Nautilus to display the the owner of a file or folder in the 'Owner' column (and other places like the 'Preferences > Permissions' tab). Version info ============ GNOME nautilus 3.8.2 The owner field in nautilus should always refer to the named user, not a "soft" name : 'Me' or 'me'. Those people who need this field will enable it within nautilus and expect the actual named user be displayed. Notably, displaying the Owner is not enabled by default. Power users should be expected to handle real usernames and times. Reasons include : users could be named 'Me' more often now that the installer is easier for the normal user : >>"Since "me" could be a local username and usernames will probably not be capitalized." I don't believe this is a strong argument to keep the behaviour of displaying "Me".