Use Me instead of me to differentiate from any usernames

Since "me" could be a local username and usernames will probably
not be capitalized.

https://bugzilla.gnome.org/show_bug.cgi?id=680282